# cyberfly-node-web-dashboard

./: .dockerignore  .gitignore  Dockerfile.artifacts  index.html  package-lock.json  vite.config.ts
.github/workflows/: docker-build.yml
iroh-streaming/: Cargo.toml  README.md  package.json
iroh-streaming/public/wasm/: iroh_streaming.d.ts  iroh_streaming.js  iroh_streaming_bg.wasm.d.ts
iroh-streaming/src/: lib.rs  node.rs  wasm.rs
public/wasm/: iroh_streaming.d.ts  iroh_streaming_bg.wasm.d.ts
src/: App.tsx  index.css
src/api/: client.ts
src/components/: AIInference.tsx  AllNodes.tsx  BlobManager.tsx  Dashboard.tsx  DataQuery.tsx  DataSubmit.tsx  KeyPairManager.tsx  LiveStreaming.tsx  Metrics.tsx  MyNodes.tsx  PeerConnection.tsx  VideoFileStreaming.tsx
src/context/: ThemeContext.tsx
src/services/: kadena.ts  pact-services.ts  streaming.ts  video-streaming.ts
src/styles/: animations.css
src/utils/: crypto.ts
