[package]
name = "iroh-streaming"
version = "0.1.0"
edition = "2021"
description = "P2P media streaming over iroh-gossip for WebAssembly"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core iroh dependencies (matching browser-chat versions)
iroh = { version = "0.95", default-features = false }
iroh-gossip = { version = "0.95", default-features = false, features = ["net"] }
iroh-tickets = "0.2"

# Async runtime
tokio = { version = "1", default-features = false, features = ["sync"] }
n0-future = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
postcard = "1.1.1"

# WASM-specific dependencies
wasm-bindgen = "=0.2.105"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
wasm-streams = "0.4.2"
getrandom = { version = "0.3", features = [] }

# Error handling
anyhow = "1.0.86"

# Logging
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-subscriber-wasm = "0.1.0"
console_error_panic_hook = "0.1.7"

# Utilities
bytes = "1"
base64 = "0.22"
rand = "0.9"
hex = "0.4"
blake3 = { version = "1", package = "iroh-blake3" }

[profile.release]
opt-level = "s"
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["--enable-nontrapping-float-to-int", "--enable-bulk-memory"]
